--- a/collect-web/collect-webapp/pom.xml
+++ b/collect-web/collect-webapp/pom.xml
@@ -169,12 +169,12 @@
 			<groupId>org.openforis.collect</groupId>
 			<artifactId>collect-server</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.openforis.collect</groupId>
-			<artifactId>collect-client</artifactId>
-			<type>swf</type>
-			<scope>runtime</scope>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.openforis.collect</groupId> -->
+<!-- 			<artifactId>collect-client</artifactId> -->
+<!-- 			<type>swf</type> -->
+<!-- 			<scope>runtime</scope> -->
+<!-- 		</dependency> -->
 		<!-- JSTL -->
 		<dependency>
 			<groupId>javax.servlet.jsp.jstl</groupId>
