--- a/collect-web/collect-webapp/frontend/package.json
+++ b/collect-web/collect-webapp/frontend/package.json
@@ -24,14 +24,14 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.25",
     "@ngx-translate/core": "^6.0.1",
     "@ngx-translate/http-loader": "0.0.3",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4",
-    "primeng": "^2.0.2",
     "angular-in-memory-web-api": "~0.2.2",
+    "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "ionicons": "^3.0.0",
-    "ng2-charts": "^1.5.0"
+    "ng2-charts": "^1.5.0",
+    "primeng": "^4.0.3",
+    "rxjs": "^5.1.0",
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@angular/cli": "1.0.3",
