--- a/collect-server/pom.xml
+++ b/collect-server/pom.xml
@@ -469,6 +469,12 @@
 			<artifactId>JavaAPIforKml</artifactId>
 			<version>2.2.1</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/apache-xerces/xercesImpl -->
+		<dependency>
+		    <groupId>apache-xerces</groupId>
+		    <artifactId>xercesImpl</artifactId>
+		    <version>2.9.1</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>org.xerial</groupId>
