--- a/collect-web/collect-webapp/pom.xml
+++ b/collect-web/collect-webapp/pom.xml
@@ -11,6 +11,12 @@
 	<artifactId>collect-webapp</artifactId>
 	<packaging>war</packaging>
 	
+	<properties>
+		<node.version>v7.10.0</node.version>
+		<npm.version>5.0.4</npm.version>
+		<angular-cli.version>1.0.4</angular-cli.version>
+	</properties>
+	
 	<build>
 		<finalName>collect</finalName>
 		<plugins>
@@ -84,7 +90,7 @@
 				<version>1.3</version>
 				<configuration>
 					<workingDirectory>${basedir}/frontend</workingDirectory>
-					<installDirectory>${basedir}/target</installDirectory>
+					<installDirectory>${project.build.directory}</installDirectory>
 				</configuration>
 				<executions>
 					<execution>
@@ -92,8 +98,8 @@
 							<goal>install-node-and-npm</goal>
 						</goals>
 						<configuration>
-							<nodeVersion>v6.9.1</nodeVersion>
-							<npmVersion>3.10.8</npmVersion>
+							<nodeVersion>${node.version}</nodeVersion>
+							<npmVersion>${npm.version}</npmVersion>
 						</configuration>
 					</execution>
 					<execution>
@@ -111,7 +117,7 @@
 							<goal>npm</goal>
 						</goals>
 						<configuration>
-							<arguments>install -g @angular/cli@1.0.0-rc.2</arguments>
+							<arguments>install -g @angular/cli@${angular-cli.version}</arguments>
 						</configuration>
 					</execution>
 					<execution>
@@ -127,41 +133,70 @@
 				</executions>
 			</plugin>
 			<!-- MAVEN RESOURCES PLUGIN -->
-<!-- 			<plugin> -->
-<!-- 				<artifactId>maven-resources-plugin</artifactId> -->
-<!-- 				<version>3.0.2</version> -->
-<!-- 				<executions> -->
-<!-- 					<execution> -->
-<!-- 						<id>copy-resources</id> -->
-<!-- 						<phase>prepare-package</phase> -->
-<!-- 						<goals> -->
-<!-- 							<goal>copy-resources</goal> -->
-<!-- 						</goals> -->
-<!-- 						<configuration> -->
-<!-- 							<outputDirectory>${basedir}/src/main/webapp/ng2</outputDirectory> -->
-<!-- 							<resources> -->
-<!-- 								<resource> -->
-<!-- 									<directory>frontend/dist</directory> -->
-<!-- 									<filtering>false</filtering> -->
-<!-- 								</resource> -->
-<!-- 							</resources> -->
-<!-- 						</configuration> -->
-<!-- 					</execution> -->
-<!-- 				</executions> -->
-<!-- 			</plugin> -->
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.0.2</version>
+				<executions>
+					<execution>
+						<id>copy-resources</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.directory}/${project.build.finalName}/ng</outputDirectory>
+							<resources>
+								<resource>
+									<directory>frontend/dist</directory>
+									<filtering>false</filtering>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 			<!-- CLEAN -->
-<!-- 			<plugin> -->
-<!-- 				<artifactId>maven-clean-plugin</artifactId> -->
-<!-- 				<version>3.0.0</version> -->
-<!-- 				<configuration> -->
-<!-- 					<filesets> -->
-<!-- 						<fileset> -->
-<!-- 							<directory>frontend/dist</directory> -->
-<!-- 						</fileset> -->
-<!-- 					</filesets> -->
-<!-- 				</configuration> -->
-<!-- 			</plugin> -->
+			<plugin>
+				<artifactId>maven-clean-plugin</artifactId>
+				<version>3.0.0</version>
+				<configuration>
+					<filesets>
+						<fileset>
+							<directory>frontend/dist</directory>
+						</fileset>
+					</filesets>
+				</configuration>
+			</plugin>
 		</plugins>
+		
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>com.github.eirslett</groupId>
+										<artifactId>frontend-maven-plugin</artifactId>
+										<versionRange>[1.0.0,)</versionRange>
+										<goals>
+											<goal>npm</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore />
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 
 	<dependencies>
@@ -188,6 +223,16 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 		</dependency>
+		<dependency>
+	        <groupId>xerces</groupId>
+	        <artifactId>xmlParserAPIs</artifactId>
+	        <version>2.6.2</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>xerces</groupId>
+	        <artifactId>xercesImpl</artifactId>
+	        <version>2.4.0</version>
+	    </dependency>
 		<!-- Provided by the application server -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
