--- a/collect-web/collect-webapp/frontend/package.json
+++ b/collect-web/collect-webapp/frontend/package.json
@@ -23,10 +23,11 @@
     "@angular/platform-browser": "^4.3.1",
     "@angular/platform-browser-dynamic": "^4.3.1",
     "@angular/router": "^4.3.1",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.25",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.28",
     "@ngx-translate/core": "^6.0.1",
     "@ngx-translate/http-loader": "0.0.3",
     "angular-in-memory-web-api": "~0.2.2",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "ionicons": "^3.0.0",
